--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 .masthead {
   padding: 6em 0;
   background-image: url('../img/favicon.jpg');
-  background-size: 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
 }
 
