--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .masthead {
   padding: 6em 0;
-  background-image: url('../img/favicon.jpg');
+  background-image: url('../img/favicon1.jpg');
   background-size: auto;
   background-repeat: no-repeat;
 }
